@@ -427,8 +427,9 @@ public class CompatibilityChecker
 
     if (newerOptionalRemoved.isEmpty() == false)
     {
-      appendMessage(CompatibilityMessage.Impact.NEW_READER_IGNORES_DATA,
-                    "new record removed optional fields %s",
+      appendMessage(CompatibilityMessage.Impact.BREAKS_NEW_AND_OLD_READERS,
+                    "new record removed optional fields %s. This allows a new field to be added " +
+                        "with the same name but different type in the future.",
                     newerOptionalRemoved);
     }
 
